# build-your-own-tts

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_CARD.md  LICENSE  MODEL_CARD.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  security.yml
configs/: base.yaml  development.yaml  test.yaml
docker/: Dockerfile  Dockerfile.gpu  entrypoint.sh
docs/: acoustic-model.md  alignment.md  api.md  architecture.md  artifacts.md  audio-processing.md  cli.md  configuration.md  data-pipeline.md  deployment.md  evaluation.md  glossary.md  index.md  inference.md  observability.md  responsible-use.md  security.md  testing.md  text-processing.md  training.md  troubleshooting.md  vocoder.md
docs/adr/: 0001-model-architecture.md
scripts/: benchmark.py  create_tiny_fixture.py  download_example_data.py  export_model.py  validate_docs.py
src/tts_pipeline/: __init__.py  cli.py  config.py  errors.py
src/tts_pipeline/alignment/: __init__.py  duration.py
src/tts_pipeline/audio/: __init__.py  features.py  io.py
src/tts_pipeline/data/: __init__.py  manifest.py  preprocess.py  preprocessed.py  vocoder.py
src/tts_pipeline/evaluation/: __init__.py  metrics.py
src/tts_pipeline/losses/: __init__.py  (+2 more)
tests/: conftest.py
tests/e2e/: test_tiny_pipeline.py
tests/integration/: test_api.py  test_bundle.py
tests/performance/: test_latency_contract.py
tests/regression/: test_normalization_snapshot.py
tests/unit/: test_alignment.py  test_audio.py  test_config.py  test_manifest.py  test_models.py  test_normalizer.py  test_vocabulary.py
(+30 files in other folders)
