[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tts-pipeline"
version = "0.1.0"
description = "A modular, production-oriented FastSpeech2 and HiFi-GAN text-to-speech platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "TTS Pipeline Contributors" }]
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=1.26,<3",
  "prometheus-client>=0.20,<1",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "PyYAML>=6.0,<7",
  "scipy>=1.12,<2",
  "soundfile>=0.12,<1",
  "torch>=2.2,<3",
  "torchaudio>=2.2,<3",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.11,<2",
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]
phonemes = ["phonemizer>=3.3,<4"]
mlflow = ["mlflow>=2.15,<4"]
otel = ["opentelemetry-api>=1.27,<2", "opentelemetry-sdk>=1.27,<2"]

[project.scripts]
tts = "tts_pipeline.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tts_pipeline"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
markers = ["performance: performance test", "regression: regression test"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM"]
ignore = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["tts_pipeline"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["tts_pipeline"]
warn_unused_ignores = true
